--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -9,6 +9,7 @@ main.inner
       tr
         th Woo ID
         th Customer
+        th Date
         th Status
         th.right Price
         th.right Actions
