--- a/app/views/purchases/_purchase.html.slim
+++ b/app/views/purchases/_purchase.html.slim
@@ -5,9 +5,10 @@ tr.hoverable id="#{dom_id purchase}" data-action="click->table#goTo" data-table-
   td.right.mono = format_money purchase.item_price
   td.right.mono = format_money purchase.total_price
   td.right.mono
-    progress.in-td value=purchase.progress max=100
+    progress.in-td value=purchase.progress max=100 class="#{class_names(finished: purchase.debt == 0, new: purchase.paid == 0)}"
     | -
-    = format_money purchase.debt
+    - if purchase.debt > 0
+      = format_money purchase.debt
   td = purchase.supplier.title
 
   - if action_name != "show"
