--- a/app/views/customers/index.html.slim
+++ b/app/views/customers/index.html.slim
@@ -2,7 +2,7 @@
 
 = render "_shared/nav-index", model: @customers
 
-main.inner
+main.wide
   = paginate @customers
   table data-controller="table"
     thead
