--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -2,7 +2,7 @@
 
 = render "_shared/nav-index", model: @products
 
-main.inner
+main.wide
   = paginate @products
   table data-controller="table"
     thead
