--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -2,7 +2,7 @@
 
 = render "_shared/nav-index", model: @sales
 
-main.inner
+main.wide
   = paginate @sales
   table data-controller="table"
     thead
