Respect incoming changes after rebasing

--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -3,7 +3,7 @@ nav
     li
       h1.classic Debts 
 
-main.inner.no-bd.v-flex
+main.wide.no-bd.flex.justify-between.flex-col.gap
   - if @unpaid_purchases.present?
     .table-card
       h3 Purchases Without Payments
