--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -4,7 +4,7 @@
 
 main.wide
   = paginate @products
-  table data-controller="table"
+  table role="grid" data-controller="table"
     thead
       tr
         th Woo ID
