--- a/app/views/dashboard/debts.html.slim
+++ b/app/views/dashboard/debts.html.slim
@@ -25,8 +25,9 @@ main.wide.no-bd.flex.justify-between.flex-col.gap
               td = unpaid.amount
 
   .table-card
-    h3 Sales Debt
-    = paginate @debts
+    .search-navigation
+      = render partial: "_shared/search-form", locals: {path: debts_path}
+      = paginate @debts
     table role="grid" data-controller="table"
       thead
         th Title
@@ -50,3 +51,23 @@ main.wide.no-bd.flex.justify-between.flex-col.gap
               td = product.purchased
               td = product.debt
     = paginate @debts
+
+  - if @unpaid_purchases.present?
+    .table-card
+      h3 Purchases Without Payments
+      table role="grid" data-controller="table"
+        thead
+          th Purchased Ago
+          th Supplier
+          th.right Cost
+          th Qty
+        tbody
+          - @unpaid_purchases.each do |unpaid|
+            tr.hoverable(
+              data-action="click->table#goTo"
+              data-table-url-param=purchase_path(unpaid)
+            )
+              td.no-wrap = time_ago_in_words unpaid.created_at
+              td = unpaid.supplier.title
+              td.mono.right = format_money unpaid.item_price
+              td = unpaid.amount
