--- a/app/views/customers/index.html.slim
+++ b/app/views/customers/index.html.slim
@@ -3,7 +3,9 @@
 = render "_shared/nav-index", model: @customers
 
 main.wide
-  = paginate @customers
+  .search-navigation
+    = render partial: "_shared/search-form", locals: {path: customers_path}
+    = paginate @customers
   table data-controller="table"
     thead
       tr
