--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -3,7 +3,9 @@
 = render "_shared/nav-index", model: @products
 
 main.wide
-  = paginate @products
+  .search-navigation
+    = render partial: "_shared/search-form", locals: {path: products_path}
+    = paginate @products
   table role="grid" data-controller="table"
     thead
       tr
