--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -3,7 +3,9 @@
 = render "_shared/nav-index", model: @purchases
 
 main.wide data-controller="table"
-  = paginate @purchases
+  .search-navigation
+    = render partial: "_shared/search-form", locals: {path: purchases_path}
+    = paginate @purchases
   table(role="grid")
     thead
       tr
