--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -3,7 +3,9 @@
 = render "_shared/nav-index", model: @sales
 
 main.wide
-  = paginate @sales
+  .search-navigation
+    = render partial: "_shared/search-form", locals: {path: sales_path}
+    = paginate @sales
   table role="grid" data-controller="table"
     thead
       tr
