--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -10,9 +10,10 @@ main.wide
     table role="grid" data-controller="table"
       thead
         tr
-          th Woo ID
+          th Image
           th Full name
-          th Actions
+          th Woo ID
+        th Actions
       tbody
         = render @products
     = paginate @products
