--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,18 +34,21 @@
   --rgb-debt-color: 245, 179, 50;
   --rgb-paid-color: 67, 160, 71;
 }
+
 @font-face {
   font-family: "SF Mono";
   font-style: normal;
   font-weight: 400;
   src: url("sf-mono-regular-webfont.woff2") format("woff2");
 }
+
 @font-face {
   font-family: "Noto Emo";
   font-style: normal;
   font-weight: 400;
   src: url("noto-emoji-400.woff2") format("woff2");
 }
+
 @font-face {
   font-family: "Bricolage Grotesque";
   font-style: normal;
@@ -54,6 +57,7 @@
   font-display: auto;
   src: url("BricolageGrotesque-Regular.woff2") format("woff2");
 }
+
 @font-face {
   font-family: "Bricolage Grotesque";
   font-style: normal;
@@ -62,44 +66,54 @@
   font-display: auto;
   src: url("BricolageGrotesque-Bold.woff2") format("woff2");
 }
+
 i.icn {
   font-family: "Noto Emo";
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 * {
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 body {
   padding-bottom: calc(var(--spacing) * 10);
 }
+
 @media (min-width: 992px) {
-  body > header,
-  body > main,
-  body > footer,
+
+  body>header,
+  body>main,
+  body>footer,
   section {
     --block-spacing-vertical: var(--spacing-xl);
   }
 }
+
 @media (min-width: 1200px) {
-  body > footer,
-  body > header,
-  body > main {
+
+  body>footer,
+  body>header,
+  body>main {
     max-width: 80vw;
   }
-  body > header,
-  body > main,
-  body > footer,
+
+  body>header,
+  body>main,
+  body>footer,
   section {
     --block-spacing-vertical: var(--spacing-l);
   }
 }
+
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
   --primary: hsl(210deg 100% 50%);
@@ -113,23 +127,28 @@ body {
     --primary-hover: hsl(210deg 100% 70%);
   }
 }
+
 [data-theme="dark"] {
   --primary: hsl(210deg 100% 60%);
   --primary-hover: hsl(210deg 100% 70%);
 }
+
 @media (prefers-color-scheme: light) {
   table[role="grid"]:not(.vertical) tbody tr:nth-child(odd) {
     --table-row-stripped-background-color: oklch(0.99 0 0 / 1);
   }
 }
+
 @media (prefers-color-scheme: dark) {
   table tbody tr.hoverable:hover td {
     background-color: oklch(0.34 0.05 227.45 / 0.63);
   }
+
   .debts--card table tbody tr:nth-child(odd) {
     background-color: oklch(0.26 0.018 227.88 / 1);
   }
 }
+
 button,
 input[type="submit"],
 input[type="button"],
@@ -137,33 +156,46 @@ input[type="reset"],
 [role="button"] {
   font-size: var(--font-size);
 }
+
 main nav {
   align-items: baseline;
 }
+
 nav h1 {
   margin: 0;
 }
+
 ul nav {
   margin-left: var(--spacing);
 }
+
+header nav li {
+  padding: 0 calc(var(--nav-element-spacing-horizontal) * 0.8);
+}
+
 nav ul nav li {
   padding-left: calc(var(--nav-element-spacing-horizontal) * 0.8);
   padding-right: calc(var(--nav-element-spacing-horizontal) * 0.8);
 }
+
 main main {
   margin: var(--block-spacing-vertical) 0;
 }
-body > header {
+
+body>header {
   padding-top: 1rem;
 }
-body > header > nav a {
+
+body>header>nav a {
   font-size: small;
   color: var(--muted-color);
   height: auto;
 }
-body > header > nav a:hover {
+
+body>header>nav a:hover {
   color: var(--contrast);
 }
+
 .btn-danger {
   margin-top: var(--spacing-xl);
   background-color: var(--form-element-invalid-active-border-color);
@@ -173,19 +205,22 @@ body > header > nav a:hover {
 /* 
   TABLES start
 */
-main > table th:last-of-type {
+main>table th:last-of-type {
   text-align: right;
 }
+
 table thead th {
   font-size: smaller;
   font-weight: 700;
 }
+
 .vertical {
   width: fit-content;
   min-width: fit-content;
   margin: 0;
   margin-bottom: var(--table-spacing-vertical);
 }
+
 .vertical td,
 .vertical th {
   display: block;
@@ -196,6 +231,7 @@ table thead th {
   padding: var(--spacing);
   padding-bottom: 0;
 }
+
 .vertical thead th {
   color: var(--muted-color);
   width: var(--table-left-part-width);
@@ -210,73 +246,92 @@ table thead th {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 .vertical thead,
 .vertical tbody {
   float: left;
   border-radius: 8px;
   overflow: hidden;
 }
+
 .vertical td:last-of-type {
   padding-bottom: 1.5rem;
 }
+
 .vertical td {
   min-width: 20vw;
   max-width: 60vw;
 }
+
 td.fit {
   width: 10vw;
 }
+
 td.no-wrap {
   white-space: nowrap;
 }
+
 tr.hoverable {
   cursor: pointer;
 }
+
 tr.hoverable td {
   transition: all var(--transition);
 }
+
 tr.hoverable:hover td {
   background-color: var(--primary-focus);
   border-color: var(--primary-focus);
 }
+
 tr.hoverable .actions a {
   transition: all var(--transition);
 }
+
 tr.hoverable:hover .actions a {
   border-color: var(--primary-focus);
   filter: brightness(0.9);
 }
+
 td.right,
 th.right {
   text-align: right;
 }
+
 td.v-bot {
   vertical-align: bottom;
 }
+
 td.actions {
   font-size: calc(var(--font-size) / 1.15);
   white-space: nowrap;
   text-align: right;
 }
+
 td.actions a {
   padding: 0.5em;
   border: 1px solid var(--muted-border-color);
   border-radius: var(--border-radius);
 }
+
 td.actions a:hover {
   border: 1px solid var(--primary-focus);
   background-color: var(--primary-focus);
   text-decoration: none;
 }
+
 td.actions a:not(:first-of-type) {
   margin-left: 0.25rem;
 }
+
 table a[data-turbo-method="delete"] {
   color: var(--form-element-invalid-active-border-color);
 }
+
 th {
   white-space: nowrap;
 }
+
 /* 
   TABLES end
 */
@@ -285,42 +340,48 @@ th {
   font-size: 2rem;
   color: var(--muted-color);
 }
+
 article:not(.notice) {
   padding-right: calc(var(--block-spacing-horizontal) * 2);
   padding-bottom: calc(var(--block-spacing-vertical) * 2);
 }
+
 article.notice {
   box-shadow: none;
 }
+
 article.notice.is-info {
   color: var(--form-element-valid-border-color);
   background: var(--form-element-valid-focus-color);
 }
+
 article.notice.is-error {
   color: var(--form-element-invalid-active-border-color);
   background: var(--form-element-invalid-focus-color);
 }
+
 article.notice.is-error ul {
   color: var(--form-element-invalid-border-color);
 }
+
 article.notice.is-info,
 article.notice header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 article.notice.is-error header {
   background: none;
   border-color: var(--form-element-invalid-focus-color);
 }
+
 article.notice .icn {
   font-size: 1.5rem;
 }
+
 .ss-main {
-  min-height: calc(
-    1rem * var(--line-height) + var(--form-element-spacing-vertical) * 2 +
-      var(--border-width) * 2
-  );
+  min-height: calc(1rem * var(--line-height) + var(--form-element-spacing-vertical) * 2 + var(--border-width) * 2);
 
   background-color: var(--form-element-background-color);
   padding: var(--form-element-spacing-vertical) 0;
@@ -333,77 +394,93 @@ article.notice .icn {
   background-size: 1rem auto;
   background-repeat: no-repeat;
 }
+
 .ss-content .ss-search input {
   background-position: center right 0.75rem;
   background-size: 1rem auto;
   background-repeat: no-repeat;
 }
+
 .ss-arrow {
   display: none;
   opacity: 0;
 }
+
 .ss-main .ss-values .ss-value .ss-value-text {
   font-size: var(--font-size);
 }
+
 .ss-main .ss-values .ss-value {
   background-color: var(--muted-color);
 }
+
 .ss-option {
-  min-height: calc(
-    1rem * var(--line-height) + var(--form-element-spacing-vertical) * 2 +
-      var(--border-width) * 2
-  );
+  min-height: calc(1rem * var(--line-height) + var(--form-element-spacing-vertical) * 2 + var(--border-width) * 2);
 }
 
 progress.in-td {
   display: block;
 }
+
 progress.in-td {
   color: rgba(var(--rgb-debt-color), 0.8);
 }
+
 progress.in-td::-moz-progress-bar {
   background: rgba(var(--rgb-debt-color), 0.8);
 }
+
 progress.in-td::-webkit-progress-value {
   background: rgba(var(--rgb-debt-color), 0.8);
 }
+
 progress.finished {
   color: rgb(var(--rgb-paid-color));
 }
+
 progress.finished::-moz-progress-bar {
   background: rgb(var(--rgb-paid-color));
 }
+
 progress.finished::-webkit-progress-value {
   background: rgb(var(--rgb-paid-color));
 }
+
 .sign {
   opacity: 0.5;
   display: inline;
 }
+
 form.payment {
   padding-top: var(--spacing);
   padding-left: var(--spacing);
 }
+
 form.payment input[type="number"] {
   width: 40%;
   margin-right: 1rem;
 }
+
 form.payment input[type="submit"] {
   width: auto;
   margin: 0;
 }
+
 progress.no-mg {
   margin: 0;
 }
+
 .radio-buttons {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5em;
 }
+
 .radio-buttons input,
 .radio-buttons label {
   margin: 0;
 }
+
 .radio-btn {
   cursor: pointer;
   padding: 0.5em;
@@ -414,25 +491,31 @@ progress.no-mg {
   border: 1px solid var(--muted-border-color);
   border-radius: var(--border-radius);
 }
+
 .radio-btn:hover {
   border: 1px solid var(--primary-focus);
   background-color: var(--primary-focus);
 }
+
 .radio-btn--label {
   margin: 0;
   text-transform: capitalize;
   cursor: pointer;
 }
+
 .sale_product {
   margin: 1.5rem 0;
 }
+
 a {
   height: 100%;
 }
+
 button.is-inverted {
   --background-color: var(--background-color);
   --color: var(--primary);
 }
+
 button.is-inverted:hover {
   --background-color: var(--primary-focus);
 }
@@ -447,11 +530,13 @@ button.is-inverted:hover {
   justify-content: center;
   text-align: center;
 }
+
 .pagination-list {
   order: 0;
   flex-grow: 1;
   flex-shrink: 1;
 }
+
 .pagination a {
   font-size: calc(var(--font-size) / 1.25);
   margin: 0;
@@ -459,28 +544,34 @@ button.is-inverted:hover {
   border: 1px solid var(--muted-border-color);
   white-space: nowrap;
 }
+
 .pagination a:hover {
   background-color: var(--primary-focus);
   border-color: var(--primary-focus);
 }
+
 .pagination a[rel="prev"] {
   order: 1;
   margin-left: var(--spacing);
 }
+
 .pagination a[rel="next"] {
   order: 2;
   margin-left: var(--spacing);
 }
+
 .pagination-link.is-current {
   background-color: var(--muted-border-color);
   border-color: var(--muted-border-color);
   color: var(--muted-color);
 }
+
 .pagination-link.is-current:hover {
   background-color: var(--muted-border-color);
   border-color: var(--muted-border-color);
   cursor: default;
 }
+
 /* 
   PAGINATION end
 */
@@ -489,6 +580,7 @@ button.is-inverted:hover {
   font-family: "SF Mono", SFMono-Regular, ui-monospace, "DejaVu Sans Mono",
     Menlo, Consolas, monospace;
 }
+
 .mute {
   color: var(--muted-color);
 }
@@ -501,25 +593,31 @@ button.is-inverted:hover {
   border-radius: var(--border-radius);
   overflow: hidden;
 }
+
 .table-card.full-width {
   width: 100%;
 }
+
 .table-card.mg-t {
   margin-top: var(--spacing-xl);
 }
+
 .table-card h3 {
   margin: 0;
   margin-bottom: var(--spacing);
   padding: var(--spacing);
   padding-bottom: 0;
 }
+
 .table-card table {
   margin-bottom: 0;
 }
+
 .table-card th {
   font-size: calc(var(--font-size) * 0.8);
   font-weight: 700;
 }
+
 .table-card tr:last-child td {
   border-bottom: 0;
 }
@@ -529,11 +627,13 @@ button.is-inverted:hover {
   justify-content: space-between;
   gap: var(--spacing-m);
 }
+
 .table-cards-group {
-  > .table-card {
+  >.table-card {
     padding-bottom: 0;
   }
-  > .table-card table {
+
+  >.table-card table {
     margin-bottom: 0;
   }
 }
@@ -546,7 +646,7 @@ h1.classic {
 }
 
 main.wide {
-  margin: 0 -4rem;
+  margin: 0 -6rem;
   border: 1px solid var(--table-border-color);
   border-radius: var(--border-radius);
 }
@@ -556,13 +656,15 @@ main.wide.no-bd {
 }
 
 main.wide.w-pd {
-  padding: 2.5vw 4vw 5vw 2vw;
+  padding: var(--spacing-m);
+  padding-bottom: var(--spacing-l);
 }
 
 @media (min-width: 1200px) {
-  body > footer,
-  body > header,
-  body > main {
+
+  body>footer,
+  body>header,
+  body>main {
     max-width: 66vw;
   }
 }
@@ -584,7 +686,8 @@ main.wide.w-pd {
   padding-right: calc(var(--spacing) * 2);
   background: var(--table-row-stripped-background-color);
   border-radius: var(--border-radius);
-  > .title {
+
+  >.title {
     font-size: smaller;
     color: var(--muted-color);
   }
@@ -601,10 +704,12 @@ main.wide.w-pd {
   border-radius: var(--border-radius);
   transition: all var(--transition);
 }
+
 .dropdown__btn {
   padding: calc(var(--spacing) / 2);
   cursor: pointer;
 }
+
 .dropdown__content {
   opacity: 0;
   visibility: hidden;
@@ -620,23 +725,29 @@ main.wide.w-pd {
   box-shadow: var(--box-shadow-menu);
   transition: all var(--transition);
 }
+
 .dropdown__content li {
   margin: 0;
   padding: 0;
 }
+
 .dropdown:hover {
   background: var(--primary-focus);
 }
+
 .dropdown:hover .dropdown__content {
   visibility: visible;
   opacity: 1;
 }
+
 input {
   display: block;
 }
+
 [type="submit"] {
   margin-top: var(--spacing-xl);
 }
+
 img.product {
   height: auto;
   width: 400px;
@@ -644,10 +755,12 @@ img.product {
   object-position: center;
   border-radius: var(--border-radius);
 }
+
 .product-variations {
   padding-top: calc(var(--spacing) / 2);
   margin-bottom: calc(var(--spacing) / 2.5);
 }
+
 .product-variations li {
   list-style: none;
   margin-left: var(--spacing-m);
@@ -665,17 +778,20 @@ img.product {
 tr.selected {
   background: var(--mark-background-color) !important;
 }
+
 tr.selected td {
   border-bottom-color: var(--secondary-focus);
 }
+
 @media only screen and (prefers-color-scheme: dark) {
   tr.selected {
     background: var(--mark-background-color) !important;
 
-    & > td {
+    &>td {
       color: var(--background-color);
     }
   }
+
   tr.hoverable.selected:hover td {
     color: var(--color);
   }
@@ -683,12 +799,15 @@ tr.selected td {
 
 .flex {
   display: flex;
+
   &.justify-between {
     justify-content: space-between;
   }
+
   &.flex-col {
     flex-direction: column;
   }
+
   &.gap {
     gap: calc(var(--spacing) * 2);
   }
@@ -750,5 +869,195 @@ turbo-frame[busy] {
 
   &::before {
     display: none;
+  }
+}
+
+tr.has-debt {
+  background-color: rgba(var(--rgb-debt-color), 0.1);
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  width: 70%;
+
+  & input {
+    margin: 0;
+    border-color: var(--contrast-focus);
+
+    &.is-active {
+      border-color: var(--border-color);
+    }
+  }
+
+  & .search-form__clear {
+    margin-left: 1rem;
+    color: var(--del-color);
+  }
+}
+
+.search-navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: var(--spacing-l);
+  gap: var(--spacing-xl);
+
+  & .pagination {
+    margin: 0;
+
+    & li {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
+}
+
+turbo-frame {
+  transition: opacity 500ms ease-out;
+}
+
+turbo-frame[busy] {
+  opacity: 0.35;
+
+  &::before {
+    display: none;
+  }
+}
+
+.thumb {
+  border-radius: 2px;
+  width: 50px;
+  transition-property: all;
+  transition-duration: 0.15s;
+  transition-timing-function: ease-out;
+}
+
+.thumb:hover {
+  transform: scale(6);
+}
+
+.text-center {
+  text-align: center;
+}
+
+.gallery {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: var(--spacing-m);
+  width: 600px;
+  height: 600px;
+  flex-shrink: 1;
+
+  .gallery__nav {
+    width: 120px;
+    height: 80%;
+    align-self: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    padding: var(--spacing);
+    gap: var(--spacing);
+    overflow: scroll;
+
+    img {
+      width: 5rem;
+      object-fit: cover;
+    }
+  }
+
+  .gallery__main {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    justify-content: center;
+
+    img {
+      height: fit-content;
+      align-self: center;
+    }
+
+    &.loading {
+      border-radius: 2px;
+      animation: pulse 2s infinite ease-in-out;
+    }
+  }
+
+  img {
+    border-radius: 2px;
+  }
+
+  .gallery__btn {
+    position: absolute;
+    top: 50%;
+    height: 100%;
+    width: 5rem;
+    transform: translateY(-50%);
+    background: transparent;
+    color: rgba(0, 0, 0, 0.25);
+    border: none;
+    font-size: 2rem;
+    font-weight: 100;
+
+    &:first-of-type {
+      left: 0;
+    }
+
+    &:last-of-type {
+      right: 0;
+    }
+
+    &:hover {
+      color: var(--primary);
+      background-color: var(--primary-focus);
+    }
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
+}
+
+.shrink-2 {
+  flex-shrink: 2;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.gallery__nav {
+  img {
+    border-radius: 4px;
+    padding: 6px;
+    transition: all var(--transition);
+
+    &:hover {
+      box-shadow: 0 0 6px 2px rgba(97, 184, 241, 0.5);
+      cursor: pointer;
+    }
+  }
+
+  img.active {
+    box-shadow: 0 0 4px 2px rgba(115, 130, 140, 0.25);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #ffffff;
+  }
+
+  50% {
+    background-color: var(--table-row-stripped-background-color);
+  }
+
+  100% {
+    background-color: #ffffff;
   }
 }
