--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -7,7 +7,7 @@ main.wide.no-bd.flex.justify-between.flex-col.gap
   .table-card
     h3.flex.justify-between
       span Sales Debt
-      span = @sale_debts.size
+      span = @sale_debts.length
     table role="grid" data-controller="table"
       thead
         th Title
